# autoresearch-mlx

./: .gitignore  README.md  prepare.py  program.md  pyproject.toml  train.py
.planning/: architecture.md
.planning/active/: DD-001-mlx-metal-port.md  PLAN-001-mlx-metal-port.md
